# MyMoneyPy

./: .gitignore  README.md  manage.py  pyproject.toml
MyMoneyPy/: asgi.py  jinja2.py  settings.py  urls.py  wsgi.py
accounts/: models.py
accounts/migrations/: 0001_initial.py  0002_account_bic.py  0003_subaccount.py
api_schema/: schema.py
api_schema/budgets/: mutation.py  queries.py  types.py
budgets/: admin.py  models.py
budgets/migrations/: 0001_initial.py  0002_budgettransaction_alter_budget_current_balance_and_more.py  0003_budget_target_balance.py  0004_delete_budgettransaction_budget_is_active.py  0005_budget_savings_rate.py
transactions/: models.py
transactions/migrations/: 0001_initial.py
