[project]
name = "mymoneypy"
version = "0.1.0"
description = ""
authors = [
    {name = "Thorsten Bittner",email = "thorsten.bittner@balticbytes.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "django (>=5.2.5,<6.0.0)",
    "graphene-django (>=3.2.3,<4.0.0)",
    "django-graphql-jwt (>=0.4.0,<0.5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
